@@ -1,13 +1,12 @@
 package baguchan.frostrealm.entity.animal;
 
-import baguchan.frostrealm.entity.brain.FrostBoarAi;
+import baguchan.frostrealm.entity.brain.GlacierBoarAi;
 import baguchan.frostrealm.registry.FrostEntities;
 import baguchan.frostrealm.registry.FrostMemoryModuleType;
 import baguchan.frostrealm.registry.FrostSensors;
 import baguchan.frostrealm.registry.FrostTags;
 import baguchi.bagus_lib.register.ModSensors;
 import com.google.common.collect.ImmutableList;
-import com.mojang.serialization.Dynamic;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundEvents;
@@ -20,7 +19,6 @@ import net.minecraft.world.entity.ai.Brain;
 import net.minecraft.world.entity.ai.attributes.AttributeSupplier;
 import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.ai.memory.MemoryModuleType;
-import net.minecraft.world.entity.ai.sensing.Sensor;
 import net.minecraft.world.entity.ai.sensing.SensorType;
 import net.minecraft.world.entity.animal.Animal;
 import net.minecraft.world.entity.monster.hoglin.HoglinBase;
@@ -28,13 +26,23 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.List;
+
 public class GlacierBoar extends FrostAnimal {
     private static final EntityDimensions BABY_DIMENSIONS = FrostEntities.GLACIER_BOAR.get().getDimensions().scale(0.5F).withEyeHeight(0.75F);
 
-    protected static final ImmutableList<? extends SensorType<? extends Sensor<? super GlacierBoar>>> SENSOR_TYPES = ImmutableList.of(ModSensors.SMART_NEAREST_LIVING_ENTITY_SENSOR.get(), SensorType.NEAREST_ADULT, SensorType.HURT_BY
-            , FrostSensors.FROST_BOAR_SENSOR.get(), FrostSensors.ENEMY_SENSOR.get());
+
+    private static final Brain.Provider<GlacierBoar> BRAIN_PROVIDER = Brain.<GlacierBoar>provider(
+            List.of(
+                    ModSensors.SMART_NEAREST_LIVING_ENTITY_SENSOR.get(), SensorType.NEAREST_ADULT, SensorType.HURT_BY
+                    , FrostSensors.FROST_BOAR_SENSOR.get(), FrostSensors.ENEMY_SENSOR.get()
+            ),
+            var0 -> GlacierBoarAi.getActivities()
+    );
+
     protected static final ImmutableList<? extends MemoryModuleType<?>> MEMORY_TYPES = ImmutableList.of(MemoryModuleType.BREED_TARGET, MemoryModuleType.NEAREST_LIVING_ENTITIES, MemoryModuleType.NEAREST_VISIBLE_LIVING_ENTITIES, MemoryModuleType.NEAREST_VISIBLE_PLAYER, MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, MemoryModuleType.LOOK_TARGET, MemoryModuleType.WALK_TARGET, MemoryModuleType.CANT_REACH_WALK_TARGET_SINCE, MemoryModuleType.PATH, MemoryModuleType.ATTACK_TARGET, MemoryModuleType.ATTACK_COOLING_DOWN, MemoryModuleType.NEAREST_VISIBLE_ADULT, MemoryModuleType.HURT_BY_ENTITY, MemoryModuleType.ANGRY_AT, MemoryModuleType.NEAREST_ATTACKABLE, MemoryModuleType.TEMPTING_PLAYER, MemoryModuleType.TEMPTATION_COOLDOWN_TICKS, MemoryModuleType.IS_TEMPTED, MemoryModuleType.HAS_HUNTING_COOLDOWN, MemoryModuleType.IS_PANICKING
             , FrostMemoryModuleType.NEAREST_ENEMYS.get(), FrostMemoryModuleType.NEAREST_ENEMY_COUNT.get(), MemoryModuleType.AVOID_TARGET, FrostMemoryModuleType.NEAREST_FROST_BOARS.get(), FrostMemoryModuleType.FROST_BOAR_COUNT.get());
+
 
     private float runningScale;
     public AnimationState attackAnimation = new AnimationState();
@@ -66,16 +74,13 @@ public class GlacierBoar extends FrostAnimal {
         this.getBrain().tick(serverLevel, this);
         profiler.pop();
         profiler.push("boarActivityUpdate");
-        FrostBoarAi.updateActivity(this);
+        GlacierBoarAi.updateActivity(this);
         profiler.pop();
     }
 
-    protected Brain.Provider<GlacierBoar> brainProvider() {
-        return Brain.provider(MEMORY_TYPES, SENSOR_TYPES);
-    }
-
-    protected Brain<?> makeBrain(Dynamic<?> p_35064_) {
-        return FrostBoarAi.makeBrain(this, this.brainProvider().makeBrain(p_35064_));
+    @Override
+    protected Brain<GlacierBoar> makeBrain(Brain.Packed packedBrain) {
+        return BRAIN_PROVIDER.makeBrain(this, packedBrain);
     }
 
     public Brain<GlacierBoar> getBrain() {
@@ -93,7 +98,7 @@ public class GlacierBoar extends FrostAnimal {
 
     @Override
     protected SoundEvent getAmbientSound() {
-        return this.level().isClientSide() ? null : FrostBoarAi.getSoundForCurrentActivity(this).orElse(null);
+        return this.level().isClientSide() ? null : GlacierBoarAi.getSoundForCurrentActivity(this).orElse(null);
     }
 
     @Override
@@ -154,7 +159,7 @@ public class GlacierBoar extends FrostAnimal {
         } else {
             this.level().broadcastEntityEvent(this, (byte) 4);
             this.playSound(SoundEvents.HOGLIN_ATTACK, 1.0F, this.getVoicePitch());
-            FrostBoarAi.onHitTarget(this, (LivingEntity) p_34491_);
+            GlacierBoarAi.onHitTarget(this, (LivingEntity) p_34491_);
             return HoglinBase.hurtAndThrowTarget(serverLevel, this, (LivingEntity) p_34491_);
         }
     }
@@ -173,7 +178,7 @@ public class GlacierBoar extends FrostAnimal {
         boolean flag = super.hurtServer(serverLevel, p_34503_, p_34504_);
 
         if (flag && p_34503_.getEntity() instanceof LivingEntity) {
-            FrostBoarAi.wasHurtBy(serverLevel, this, (LivingEntity) p_34503_.getEntity());
+            GlacierBoarAi.wasHurtBy(serverLevel, this, (LivingEntity) p_34503_.getEntity());
         }
 
         return flag;
